extract dict values from original dataframe

--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -783,12 +783,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>coord</th>\n",
+       "      <th>dt</th>\n",
+       "      <th>id</th>\n",
+       "      <th>main</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>wind</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Yuksekova</td>\n",
+       "      <td>{'lon': 44.29, 'lat': 37.57}</td>\n",
+       "      <td>1554562800</td>\n",
+       "      <td>296173</td>\n",
+       "      <td>{'temp': 13, 'pressure': 1013, 'humidity': 47,...</td>\n",
+       "      <td>{'all': 20}</td>\n",
+       "      <td>{'speed': 7.2, 'deg': 220}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Nikolskoye</td>\n",
+       "      <td>{'lon': 30.79, 'lat': 59.7}</td>\n",
+       "      <td>1554568200</td>\n",
+       "      <td>546105</td>\n",
+       "      <td>{'temp': 10.91, 'pressure': 1023, 'humidity': ...</td>\n",
+       "      <td>{'all': 0}</td>\n",
+       "      <td>{'speed': 5, 'deg': 100}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Suntar</td>\n",
+       "      <td>{'lon': 117.65, 'lat': 62.16}</td>\n",
+       "      <td>1554568344</td>\n",
+       "      <td>2015913</td>\n",
+       "      <td>{'temp': -7.51, 'pressure': 1022.94, 'humidity...</td>\n",
+       "      <td>{'all': 0}</td>\n",
+       "      <td>{'speed': 1.46, 'deg': 284.504}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>{'lon': -73.75, 'lat': 42.65}</td>\n",
+       "      <td>1554568325</td>\n",
+       "      <td>5106834</td>\n",
+       "      <td>{'temp': 7.91, 'pressure': 1023, 'humidity': 6...</td>\n",
+       "      <td>{'all': 90}</td>\n",
+       "      <td>{'speed': 2.66, 'deg': 295.004}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Hobart</td>\n",
+       "      <td>{'lon': 147.33, 'lat': -42.88}</td>\n",
+       "      <td>1554568154</td>\n",
+       "      <td>2163355</td>\n",
+       "      <td>{'temp': 9.31, 'pressure': 1014, 'humidity': 7...</td>\n",
+       "      <td>{'all': 0}</td>\n",
+       "      <td>{'speed': 3.6, 'deg': 330}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name                           coord          dt       id  \\\n",
+       "0   Yuksekova    {'lon': 44.29, 'lat': 37.57}  1554562800   296173   \n",
+       "1  Nikolskoye     {'lon': 30.79, 'lat': 59.7}  1554568200   546105   \n",
+       "2      Suntar   {'lon': 117.65, 'lat': 62.16}  1554568344  2015913   \n",
+       "3      Albany   {'lon': -73.75, 'lat': 42.65}  1554568325  5106834   \n",
+       "4      Hobart  {'lon': 147.33, 'lat': -42.88}  1554568154  2163355   \n",
+       "\n",
+       "                                                main       clouds  \\\n",
+       "0  {'temp': 13, 'pressure': 1013, 'humidity': 47,...  {'all': 20}   \n",
+       "1  {'temp': 10.91, 'pressure': 1023, 'humidity': ...   {'all': 0}   \n",
+       "2  {'temp': -7.51, 'pressure': 1022.94, 'humidity...   {'all': 0}   \n",
+       "3  {'temp': 7.91, 'pressure': 1023, 'humidity': 6...  {'all': 90}   \n",
+       "4  {'temp': 9.31, 'pressure': 1014, 'humidity': 7...   {'all': 0}   \n",
+       "\n",
+       "                              wind  \n",
+       "0       {'speed': 7.2, 'deg': 220}  \n",
+       "1         {'speed': 5, 'deg': 100}  \n",
+       "2  {'speed': 1.46, 'deg': 284.504}  \n",
+       "3  {'speed': 2.66, 'deg': 295.004}  \n",
+       "4       {'speed': 3.6, 'deg': 330}  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create dataframe from data\n",
+    "cityweather = pd.DataFrame(data)\n",
+    "\n",
+    "# Filter down to just the necessary columns\n",
+    "cityweather = cityweather[['name', 'coord', 'dt', 'id', 'main', 'clouds', 'wind']]\n",
+    "cityweather.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cityweather = pd.DataFrame(data)\n",
-    "cityweather.head()"
+    "# Many of the fields are actually dictionary values grouped under a single parent column in the dataframe\n",
+    "# Extract the dictionaries containing temp, wind speed, humidity, cloud % and latitude, then set each to lists\n",
+    "coord = cityweather['coord'].tolist()\n",
+    "main = cityweather['main'].tolist()\n",
+    "clouds = cityweather['clouds'].tolist()\n",
+    "wind = cityweather['wind'].tolist()\n",
+    "\n",
+    "# Create dataframes from those lists\n",
+    "coord_df = pd.DataFrame(coord)\n",
+    "main_df = pd.DataFrame(main)\n",
+    "clouds_df = pd.DataFrame(clouds)\n",
+    "wind_df = pd.DataFrame(wind)\n",
+    "\n",
+    "# prep original dataframe to be compatible with merges with the new DFs by creating a list, setting\n",
+    "mergeready = cityweather.loc[:, ['name', 'dt']]\n",
+    "\n",
+    "# merge new DFs with original\n",
+    "\n"
    ]
   },
   {
